# dataset-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG  Makefile  Pipfile  README.md  bitbucket-pipelines.yml  dvc-cheat-sheet.md  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
config/: config.yaml  params.yaml
notebooks/: reference_pipeline.ipynb  reference_pipeline.sh
src/: annotate_image.py  combine_csv.py  copy_images.sh  interim_to_processed.py  yolo_to_csv.py
